Separate prompts into template/system messages

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ __pycache__/
 *.pyo
 *.egg-info/
 .pytest_cache/
+.ipynb_checkpoints/
 
 # Virtual environment
 .venv/
@@ -23,6 +24,7 @@ venv/
 *.swp
 *.bak
 *.swo
+*.dir-locals.el
 
 # OS generated files
 .DS_Store
